// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ConsoleIo/Print Block Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots ConsoleIo/Print Block Existing Data Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots ConsoleIo/Print Block Non Starting Block 1`] = `
<div>
  <div
    class="viamo-app-container flow-builder-sidebar-editor-container"
    id="viamo-app"
  >
    <div
      class="container-full"
    >
      <div
        class="main-content-container"
      >
        <section
          id="tree-app"
        >
          <div
            class="edit-tree"
            id="tree-interaction-designer"
          >
            <div
              class="interaction-designer-contents panel panel-default"
            >
              <div
                class="hidden-print hidden-xs hidden-sm tree-sidebar-menu-container"
              >
                <nav
                  class="bs-docs-sidebar"
                >
                  <div
                    class="tree-sidebar-menu"
                    id="tree-sidebar"
                  >
                    <div
                      class="tree-sidebar-edit-block"
                      data-block-type="ConsoleIO\\\\Print"
                      data-for-block-id="fake-uuid-181"
                    >
                      <div>
                        <h3
                          class="no-room-above"
                        >
                          
    Edit Print block
  
                        </h3>
                         
                        <fieldset>
                          <div>
                            <div
                              class="form-group"
                            >
                              <label>
                                Block name
                              </label>
                               
                              <textarea
                                class="form-control"
                                placeholder="Enter a block name"
                              />
                               
                              <small
                                class="text-muted"
                              >
                                
      Only accepts word characters
    
                              </small>
                            </div>
                          </div>
                           
                          <div>
                            <div
                              class="form-group"
                            >
                              <label>
                                Block label
                              </label>
                               
                              <textarea
                                class="form-control"
                                placeholder="Enter a block label"
                              />
                               
                            </div>
                          </div>
                           
                          <div>
                            <div
                              class="form-group"
                            >
                              <label>
                                Block semantic label
                              </label>
                               
                              <textarea
                                class="form-control"
                                placeholder="Enter a block semantic label"
                              />
                               
                            </div>
                          </div>
                           
                          <!---->
                           
                          <div
                            class="starting-block-button"
                          >
                            <h4>
                              Options
                            </h4>
                             
                            <div
                              class="form-group"
                            >
                              <button
                                class="btn btn-secondary btn-sm"
                                disabled="disabled"
                                type="button"
                              >
                                
          Currently set as starting block
        
                              </button>
                            </div>
                          </div>
                        </fieldset>
                         
                        <div
                          class="text-right"
                        >
                          <small
                            class="text-muted"
                          >
                            Block Id: 
                            <em>
                              fake-uuid-181
                            </em>
                          </small>
                        </div>
                      </div>
                    </div>
                  </div>
                </nav>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ConsoleIo/Read Block Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots ConsoleIo/Read Block Existing Data Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots ConsoleIo/Read Block Existing Data Non Starting Block 1`] = `
<div>
  <div
    class="viamo-app-container flow-builder-sidebar-editor-container"
    id="viamo-app"
  >
    <div
      class="container-full"
    >
      <div
        class="main-content-container"
      >
        <section
          id="tree-app"
        >
          <div
            class="edit-tree"
            id="tree-interaction-designer"
          >
            <div
              class="interaction-designer-contents panel panel-default"
            >
              <div
                class="hidden-print hidden-xs hidden-sm tree-sidebar-menu-container"
              >
                <nav
                  class="bs-docs-sidebar"
                >
                  <div
                    class="tree-sidebar-menu"
                    id="tree-sidebar"
                  >
                    <div
                      class="tree-sidebar-edit-block"
                      data-block-type="ConsoleIO\\\\Read"
                      data-for-block-id="fake-uuid-199"
                    >
                      <div>
                        <h3
                          class="no-room-above"
                        >
                          
    Edit Read block
  
                        </h3>
                         
                        <fieldset>
                          <div>
                            <div
                              class="form-group"
                            >
                              <label>
                                Block name
                              </label>
                               
                              <textarea
                                class="form-control"
                                placeholder="Enter a block name"
                              />
                               
                              <small
                                class="text-muted"
                              >
                                
      Only accepts word characters
    
                              </small>
                            </div>
                          </div>
                           
                          <div>
                            <div
                              class="form-group"
                            >
                              <label>
                                Block label
                              </label>
                               
                              <textarea
                                class="form-control"
                                placeholder="Enter a block label"
                              />
                               
                            </div>
                          </div>
                           
                          <div>
                            <div
                              class="form-group"
                            >
                              <label>
                                Block semantic label
                              </label>
                               
                              <textarea
                                class="form-control"
                                placeholder="Enter a block semantic label"
                              />
                               
                            </div>
                          </div>
                           
                          <div>
                            <div
                              class="form-group"
                            >
                              <label>
                                flow-builder.format-string
                              </label>
                               
                              <textarea
                                class="form-control"
                                placeholder="flow-builder.enter-format-string"
                              />
                               
                            </div>
                          </div>
                            
                          <div
                            class="starting-block-button"
                          >
                            <h4>
                              Options
                            </h4>
                             
                            <div
                              class="form-group"
                            >
                              <button
                                class="btn btn-secondary btn-sm"
                                disabled="disabled"
                                type="button"
                              >
                                
          Currently set as starting block
        
                              </button>
                            </div>
                          </div>
                        </fieldset>
                         
                        <div
                          class="text-right"
                        >
                          <small
                            class="text-muted"
                          >
                            Block Id: 
                            <em>
                              fake-uuid-199
                            </em>
                          </small>
                        </div>
                      </div>
                    </div>
                  </div>
                </nav>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Case Block Styled Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Core/Case Block Styled Existing Data Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Core/Log Block Plain Default 1`] = `<!---->`;

exports[`Storyshots Core/Log Block Plain Existing Data Block 1`] = `<!---->`;

exports[`Storyshots Core/Log Block Styled Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Core/Log Block Styled Existing Data Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Core/Log Block Styled Existing Data Non Starting Block 1`] = `
<div>
  <div
    class="viamo-app-container flow-builder-sidebar-editor-container"
    id="viamo-app"
  >
    <div
      class="container-full"
    >
      <div
        class="main-content-container"
      >
        <section
          id="tree-app"
        >
          <div
            class="edit-tree"
            id="tree-interaction-designer"
          >
            <div
              class="interaction-designer-contents panel panel-default"
            >
              <div
                class="hidden-print hidden-xs hidden-sm tree-sidebar-menu-container"
              >
                <nav
                  class="bs-docs-sidebar"
                >
                  <div
                    class="tree-sidebar-menu"
                    id="tree-sidebar"
                  >
                    <div
                      class="tree-sidebar-edit-block"
                      data-block-type="Core\\\\Log"
                      data-for-block-id="fake-uuid-44"
                    >
                      <!---->
                    </div>
                  </div>
                </nav>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Output Block Styled Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Core/Run Another Flow Block Styled Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Core/Set Contact Property Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Core/Set Contact Property Existing Data Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Core/Set Group Membership Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Core/Set Group Membership Existing Data Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Flow/Flow Editor Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots Flow/Flow Editor Existing Data Pre Filled 1`] = `
<div>
  <div
    class="viamo-app-container flow-builder-sidebar-editor-container"
    id="viamo-app"
  >
    <div
      class="container-full"
    >
      <div
        class="main-content-container"
      >
        <section
          id="tree-app"
        >
          <div
            class="edit-tree"
            id="tree-interaction-designer"
          >
            <div
              class="interaction-designer-contents panel panel-default"
            >
              <div
                class="hidden-print hidden-xs hidden-sm tree-sidebar-menu-container"
              >
                <nav
                  class="bs-docs-sidebar"
                >
                  <div
                    class="tree-sidebar-menu"
                    id="tree-sidebar"
                  >
                    <div
                      class="tree-sidebar-edit-flow"
                      data-for-flow-id="fake-uuid-10"
                    >
                      <div>
                        <h3
                          class="no-room-above"
                        >
                          
    Edit Flow
  
                        </h3>
                         
                        <fieldset>
                          <div
                            class="row"
                          >
                            <div
                              class="col-12"
                            >
                              <div
                                class="form-group flow-name"
                              >
                                <div
                                  class="form-group"
                                >
                                  <label>
                                    Flow label
                                  </label>
                                   
                                  <textarea
                                    class="form-control"
                                    placeholder="Enter flow label"
                                  />
                                   
                                </div>
                              </div>
                               
                              <div
                                class="form-group flow-interaction-timeout"
                              >
                                <div
                                  class="number-editor"
                                >
                                  <label>
                                    Interaction timeout
                                  </label>
                                   
                                  <div>
                                    <input
                                      class="form-control"
                                      min="0"
                                      placeholder="Enter value"
                                      type="number"
                                    />
                                  </div>
                                   
                                </div>
                              </div>
                            </div>
                             
                            <div
                              class="col-12"
                            >
                              <div
                                class="form-group flow-languages"
                              >
                                <label>
                                  Languages
                                </label>
                                 
                                <div
                                  class="checkbox"
                                >
                                  <label
                                    class="font-weight-normal"
                                  >
                                    <input
                                      class="flow-language-toggle-checkbox"
                                      type="checkbox"
                                      value="[object Object]"
                                    />
                                    

      English
    
                                  </label>
                                </div>
                                <div
                                  class="checkbox"
                                >
                                  <label
                                    class="font-weight-normal"
                                  >
                                    <input
                                      class="flow-language-toggle-checkbox"
                                      type="checkbox"
                                      value="[object Object]"
                                    />
                                    

      Spanish
    
                                  </label>
                                </div>
                              </div>
                               
                              <div
                                class="form-group flow-modes"
                              >
                                <label>
                                  Modes
                                </label>
                                 
                                <div
                                  class="checkbox"
                                >
                                  <label
                                    class="font-weight-normal"
                                  >
                                    <input
                                      class="flow-mode-toggle-checkbox"
                                      type="checkbox"
                                      value="sms"
                                    />
                                    
      sms
    
                                  </label>
                                </div>
                                <div
                                  class="checkbox"
                                >
                                  <label
                                    class="font-weight-normal"
                                  >
                                    <input
                                      class="flow-mode-toggle-checkbox"
                                      type="checkbox"
                                      value="ussd"
                                    />
                                    
      ussd
    
                                  </label>
                                </div>
                                <div
                                  class="checkbox"
                                >
                                  <label
                                    class="font-weight-normal"
                                  >
                                    <input
                                      class="flow-mode-toggle-checkbox"
                                      type="checkbox"
                                      value="ivr"
                                    />
                                    
      ivr
    
                                  </label>
                                </div>
                                <div
                                  class="checkbox"
                                >
                                  <label
                                    class="font-weight-normal"
                                  >
                                    <input
                                      class="flow-mode-toggle-checkbox"
                                      type="checkbox"
                                      value="rich_messaging"
                                    />
                                    
      rich_messaging
    
                                  </label>
                                </div>
                                <div
                                  class="checkbox"
                                >
                                  <label
                                    class="font-weight-normal"
                                  >
                                    <input
                                      class="flow-mode-toggle-checkbox"
                                      type="checkbox"
                                      value="offline"
                                    />
                                    
      offline
    
                                  </label>
                                </div>
                              </div>
                            </div>
                          </div>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </nav>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InteractionDesigner/Toolbar Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots InteractionDesigner/Toolbar Edit Flow 1`] = `
<div>
  <div
    class="viamo-app-container flow-builder-sidebar-editor-container"
    id="viamo-app"
  >
    <div
      class="container-full"
    >
      <div
        class="main-content-container"
      >
        <section
          id="tree-app"
        >
          <div
            class="edit-tree"
            id="tree-interaction-designer"
          >
            <div
              class="interaction-designer-contents panel panel-default"
            >
              <!---->
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InteractionDesigner/Toolbar With Extra Buttons Slot 1`] = `
<div>
  <div
    class="viamo-app-container flow-builder-sidebar-editor-container"
    id="viamo-app"
  >
    <div
      class="container-full"
    >
      <div
        class="main-content-container"
      >
        <section
          id="tree-app"
        >
          <div
            class="edit-tree"
            id="tree-interaction-designer"
          >
            <div
              class="interaction-designer-contents panel panel-default"
            >
              <!---->
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InteractionDesigner/Toolbar With Grouped Buttons Slot 1`] = `
<div>
  <div
    class="viamo-app-container flow-builder-sidebar-editor-container"
    id="viamo-app"
  >
    <div
      class="container-full"
    >
      <div
        class="main-content-container"
      >
        <section
          id="tree-app"
        >
          <div
            class="edit-tree"
            id="tree-interaction-designer"
          >
            <div
              class="interaction-designer-contents panel panel-default"
            >
              <!---->
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InteractionDesigner/Toolbar With Save Button 1`] = `
<div>
  <div
    class="viamo-app-container flow-builder-sidebar-editor-container"
    id="viamo-app"
  >
    <div
      class="container-full"
    >
      <div
        class="main-content-container"
      >
        <section
          id="tree-app"
        >
          <div
            class="edit-tree"
            id="tree-interaction-designer"
          >
            <div
              class="interaction-designer-contents panel panel-default"
            >
              <!---->
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InteractionDesigner/Toolbar Without Resource Editor Toggle 1`] = `
<div>
  <div
    class="viamo-app-container flow-builder-sidebar-editor-container"
    id="viamo-app"
  >
    <div
      class="container-full"
    >
      <div
        class="main-content-container"
      >
        <section
          id="tree-app"
        >
          <div
            class="edit-tree"
            id="tree-interaction-designer"
          >
            <div
              class="interaction-designer-contents panel panel-default"
            >
              <!---->
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MobilePrimitives/Message Block Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Message Block Existing Data Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Message Block Non Starting Block 1`] = `
<div>
  <div
    class="viamo-app-container flow-builder-sidebar-editor-container"
    id="viamo-app"
  >
    <div
      class="container-full"
    >
      <div
        class="main-content-container"
      >
        <section
          id="tree-app"
        >
          <div
            class="edit-tree"
            id="tree-interaction-designer"
          >
            <div
              class="interaction-designer-contents panel panel-default"
            >
              <div
                class="hidden-print hidden-xs hidden-sm tree-sidebar-menu-container"
              >
                <nav
                  class="bs-docs-sidebar"
                >
                  <div
                    class="tree-sidebar-menu"
                    id="tree-sidebar"
                  >
                    <div
                      class="tree-sidebar-edit-block"
                      data-block-type="MobilePrimitives\\\\Message"
                      data-for-block-id="fake-uuid-62"
                    >
                      <div>
                        <h3
                          class="no-room-above"
                        >
                          
    Edit Message block
  
                        </h3>
                         
                        <fieldset>
                          <div>
                            <div
                              class="form-group"
                            >
                              <label>
                                Block name
                              </label>
                               
                              <textarea
                                class="form-control"
                                placeholder="Enter a block name"
                              />
                               
                              <small
                                class="text-muted"
                              >
                                
      Only accepts word characters
    
                              </small>
                            </div>
                          </div>
                           
                          <div>
                            <div
                              class="form-group"
                            >
                              <label>
                                Block label
                              </label>
                               
                              <textarea
                                class="form-control"
                                placeholder="Enter a block label"
                              />
                               
                            </div>
                          </div>
                           
                          <div>
                            <div
                              class="form-group"
                            >
                              <label>
                                Block semantic label
                              </label>
                               
                              <textarea
                                class="form-control"
                                placeholder="Enter a block semantic label"
                              />
                               
                            </div>
                          </div>
                           
                          <!---->
                           
                          <div
                            class="starting-block-button"
                          >
                            <h4>
                              Options
                            </h4>
                             
                            <div
                              class="form-group"
                            >
                              <button
                                class="btn btn-secondary btn-sm"
                                disabled="disabled"
                                type="button"
                              >
                                
          Currently set as starting block
        
                              </button>
                            </div>
                          </div>
                        </fieldset>
                         
                        <div
                          class="text-right"
                        >
                          <small
                            class="text-muted"
                          >
                            Block Id: 
                            <em>
                              fake-uuid-62
                            </em>
                          </small>
                        </div>
                      </div>
                    </div>
                  </div>
                </nav>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MobilePrimitives/Numeric Response Block Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Numeric Response Block Existing Data For All Modes 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Numeric Response Block Existing Data For Ivr Only 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Numeric Response Block Existing Data For Text Only 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Numeric Response Block Non Starting Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Open Response Block Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Open Response Block Existing Data For All Modes 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Open Response Block Existing Data For Ivr Only 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Open Response Block Existing Data For Text Only 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/Open Response Block Non Starting Block 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/SelectOneResponseBlock Existing Data 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/SelectOneResponseBlock In Flow Builder 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/SelectOneResponseBlock Ivr Only 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/SelectOneResponseBlock More Languages 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/selectManyResponseBlock Existing Data 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/selectManyResponseBlock In Flow Builder 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/selectManyResponseBlock Ivr Only 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots MobilePrimitives/selectManyResponseBlock More Languages 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots SmartDevices/Location Response Block Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots SmartDevices/Location Response Block Existing Data Pre Filled 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots SmartDevices/Location Response Block Non Starting Block 1`] = `
<div>
  <div
    class="viamo-app-container flow-builder-sidebar-editor-container"
    id="viamo-app"
  >
    <div
      class="container-full"
    >
      <div
        class="main-content-container"
      >
        <section
          id="tree-app"
        >
          <div
            class="edit-tree"
            id="tree-interaction-designer"
          >
            <div
              class="interaction-designer-contents panel panel-default"
            >
              <div
                class="hidden-print hidden-xs hidden-sm tree-sidebar-menu-container"
              >
                <nav
                  class="bs-docs-sidebar"
                >
                  <div
                    class="tree-sidebar-menu"
                    id="tree-sidebar"
                  >
                    <div
                      class="tree-sidebar-edit-block"
                      data-block-type="SmartDevices\\\\LocationResponse"
                      data-for-block-id="fake-uuid-13"
                    >
                      <div>
                        <h3
                          class="no-room-above"
                        >
                          
    Edit Location Response block
  
                        </h3>
                         
                        <fieldset>
                          <div>
                            <div
                              class="form-group"
                            >
                              <label>
                                Block name
                              </label>
                               
                              <textarea
                                class="form-control"
                                placeholder="Enter a block name"
                              />
                               
                              <small
                                class="text-muted"
                              >
                                
      Only accepts word characters
    
                              </small>
                            </div>
                          </div>
                           
                          <div>
                            <div
                              class="form-group"
                            >
                              <label>
                                Block label
                              </label>
                               
                              <textarea
                                class="form-control"
                                placeholder="Enter a block label"
                              />
                               
                            </div>
                          </div>
                           
                          <div>
                            <div
                              class="form-group"
                            >
                              <label>
                                Block semantic label
                              </label>
                               
                              <textarea
                                class="form-control"
                                placeholder="Enter a block semantic label"
                              />
                               
                            </div>
                          </div>
                           
                          <div
                            class="form-group block-threshold"
                          >
                            <div
                              class="float-editor"
                            >
                              <label>
                                flow-builder.accuracy-threshold-in-meters
                              </label>
                               
                              <div>
                                <input
                                  class="form-control"
                                  min="0"
                                  placeholder="Enter value"
                                  step="0.1"
                                  type="number"
                                />
                              </div>
                               
                            </div>
                          </div>
                           
                          <div
                            class="form-group block-timeout"
                          >
                            <div
                              class="number-editor"
                            >
                              <label>
                                flow-builder.Accuracy-timeout-in-seconds
                              </label>
                               
                              <div>
                                <input
                                  class="form-control"
                                  min="0"
                                  placeholder="Enter value"
                                  type="number"
                                />
                              </div>
                               
                            </div>
                          </div>
                           
                          <div
                            class="starting-block-button"
                          >
                            <h4>
                              Options
                            </h4>
                             
                            <div
                              class="form-group"
                            >
                              <button
                                class="btn btn-secondary btn-sm"
                                disabled="disabled"
                                type="button"
                              >
                                
          Currently set as starting block
        
                              </button>
                            </div>
                          </div>
                        </fieldset>
                         
                        <div
                          class="text-right"
                        >
                          <small
                            class="text-muted"
                          >
                            Block Id: 
                            <em>
                              fake-uuid-13
                            </em>
                          </small>
                        </div>
                      </div>
                    </div>
                  </div>
                </nav>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SmartDevices/Photo Response Block Default 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots SmartDevices/Photo Response Block Existing Data Pre Filled 1`] = `
<div>
  <!---->
</div>
`;

exports[`Storyshots SmartDevices/Photo Response Block Non Starting Block 1`] = `
<div>
  <div
    class="viamo-app-container flow-builder-sidebar-editor-container"
    id="viamo-app"
  >
    <div
      class="container-full"
    >
      <div
        class="main-content-container"
      >
        <section
          id="tree-app"
        >
          <div
            class="edit-tree"
            id="tree-interaction-designer"
          >
            <div
              class="interaction-designer-contents panel panel-default"
            >
              <div
                class="hidden-print hidden-xs hidden-sm tree-sidebar-menu-container"
              >
                <nav
                  class="bs-docs-sidebar"
                >
                  <div
                    class="tree-sidebar-menu"
                    id="tree-sidebar"
                  >
                    <div
                      class="tree-sidebar-edit-block"
                      data-block-type="SmartDevices\\\\PhotoResponse"
                      data-for-block-id="fake-uuid-160"
                    >
                      <div>
                        <h3
                          class="no-room-above"
                        >
                          
    Edit Photo Response block
  
                        </h3>
                         
                        <fieldset>
                          <div>
                            <div
                              class="form-group"
                            >
                              <label>
                                Block name
                              </label>
                               
                              <textarea
                                class="form-control"
                                placeholder="Enter a block name"
                              />
                               
                              <small
                                class="text-muted"
                              >
                                
      Only accepts word characters
    
                              </small>
                            </div>
                          </div>
                           
                          <div>
                            <div
                              class="form-group"
                            >
                              <label>
                                Block label
                              </label>
                               
                              <textarea
                                class="form-control"
                                placeholder="Enter a block label"
                              />
                               
                            </div>
                          </div>
                           
                          <div>
                            <div
                              class="form-group"
                            >
                              <label>
                                Block semantic label
                              </label>
                               
                              <textarea
                                class="form-control"
                                placeholder="Enter a block semantic label"
                              />
                               
                            </div>
                          </div>
                           
                          <div
                            class="starting-block-button"
                          >
                            <h4>
                              Options
                            </h4>
                             
                            <div
                              class="form-group"
                            >
                              <button
                                class="btn btn-secondary btn-sm"
                                disabled="disabled"
                                type="button"
                              >
                                
          Currently set as starting block
        
                              </button>
                            </div>
                          </div>
                        </fieldset>
                         
                        <div
                          class="text-right"
                        >
                          <small
                            class="text-muted"
                          >
                            Block Id: 
                            <em>
                              fake-uuid-160
                            </em>
                          </small>
                        </div>
                      </div>
                    </div>
                  </div>
                </nav>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;
